# lumenguard-modal

./: .env.example  .gitignore  README.md  logic.py  main.py  modal_app.py  pyproject.toml  requirements.txt
docs/architecture/: workflow.md
docs/contracts/: backend_telegram.md  logic_module.md  runtime_config.md  state_store.md
docs/memory_bank/: activeContext.md  decisions.md  errors.md  glossary.md  progress.md  techContext.md
docs/requirements/: main_logic.md
src/lumenguard/: __init__.py  config.py  logic.py  runner.py
tests/: test_logic.py  test_runner.py
